# uci

./: .gitignore  CMakeLists.txt  blob.c  cli.c  delta.c  file.c  libuci.c  list.c  parse.c  uci.h  uci_blob.h  uci_internal.h  ucimap-example.c  ucimap.c  ucimap.h  util.c
.github/workflows/: ci.yml  test.yml
debian/: control  generate-changelog.sh  libuci-dev.install  libuci-plugin-lua5.1.install  libuci0.install  rules  uci.install  watch
lua/: CMakeLists.txt  uci.c
scripts/: devel-build.sh
test/: tests.sh
test/references/: export.result  import.data  import.result  show_parsing_multiline_package.result
test/tests.d/: 020_get  050_show  060_batch  070_revert  090_cli_options
tests/: CMakeLists.txt
tests/cram/: CMakeLists.txt  test-san_uci_import.t  test_uci_import.t  test_ucilua.t  test_ucilua_testcases.t
tests/cram/lua/: basic.lua
tests/fuzz/: CMakeLists.txt
tests/shunit2/: tests.sh
tests/shunit2/tests.d/: 090_cli_options
